--- a/api/views/albuns.pug
+++ b/api/views/albuns.pug
@@ -5,15 +5,19 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1')
   // Bootstrap CSS
   link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We' crossorigin='anonymous')
-  link(href='/models/css/style.css' rel='stylesheet')
-  script(src='../Models/js/jquery/jquery.min.js')
+  link(href='../static/css/style.css' rel='import') 
+  link(rel='stylesheet', href='/css/style.css', type='text/css')
+  script(src='/js/jquery/jquery.min.js')
   // Font
   link(rel='preconnect' href='https://fonts.googleapis.com')
   link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
   link(href='https://fonts.googleapis.com/css2?family=Alumni+Sans&family=Fredericka+the+Great&family=Piedra&family=Raleway+Dots&display=swap' rel='stylesheet')
   title Projeto Negritude
 #Slide
+
+ 
   main
+
     #formGeral.container.d-flex.flex-column.col-md-6
       .container
         h2 &Aacute;lbum digital
@@ -22,7 +26,7 @@ head
           button#dados-pessoais-tab.nav-link.active(data-bs-toggle='tab' data-bs-target='#dados-pessoais' type='button' role='tab' aria-controls='dados-pessoais' aria-selected='true') Dados Pessoais
         li.nav-item(role='presentation')
           button#autorizacao-tab.nav-link(data-bs-toggle='tab' data-bs-target='#autorizacao' type='button' role='tab' aria-controls='autorizacao' aria-selected='false') Autorizacao
-      form#dataForm.row.g-3(name='dataForm' action='/album-digital' method='POST' onsubmit='return validarFormulario()')
+      form#dataForm.row.g-3(name='dataForm' action='/albuns' method='POST' onsubmit='return validarFormulario()')
         .tab-content
           #dados-pessoais.tab-pane.active.div-tab(role='tabpanel' aria-labelledby='dados-pessoais-tab')
             .col-md-12
@@ -52,16 +56,16 @@ head
                   option(selected='') Jardim
                   option(selected='') Nova Andradina
             .col-md-4
-              label.form-label(for='dataNascimento') Data Nascimento
-              input#dataNascimento.form-control(type='date' name='dataNascimento')
+              label.form-label(for='data_nascimento') Data Nascimento
+              input#dataNascimento.form-control(type='date' name='data_nascimento')
             // Menor de idade
             .row
               #div-nome-responsavel.col-md-6
-                label.form-label(for='nomeReponsavel') Nome do Respons&aacute;vel
-                input#nomeResponsavel.form-control(type='text' name='nomeResponsavel')
+                label.form-label(for='nome_responsavel') Nome do Respons&aacute;vel
+                input#nomeResponsavel.form-control(type='text' name='nome_responsavel')
               #div-cpf-responsavel.col-md-6
-                label.form-label(for='cpfResponsavel') CPF Respons&aacute;vel
-                input#cpfResponsavel.form-control(type='number' name='cpfResponsavel')
+                label.form-label(for='cpf_responsavel') CPF Respons&aacute;vel
+                input#cpfResponsavel.form-control(type='number' name='cpf_responsavel')
             // Botão próximo
             .container.d-flex.justify-content-around.div-botao
               button#proximo.btn.btn-primary(type='button') Pr&oacute;ximo
@@ -84,14 +88,14 @@ head
                 | &#xF5A4; Toda fotografia deve ser encaminhada com a autoriza&ccedil;&atilde;o de uso de imagem. A UFMS e o IFMS reservam para si, desde j&aacute;, o direito incontest&aacute;vel de reproduzir as fotografias inscritas em seu material institucional a qualquer momento e por tempo indeterminado, dando os devidos cr&eacute;ditos ao fot&oacute;grafo.
             .row
               .col-md-6
-                label.form-label(for='tituloFoto') T&iacute;tulo da Foto
-                input#tituloFoto.form-control(type='text' name='tituloFoto')
+                label.form-label(for='titulo_foto') T&iacute;tulo da Foto
+                input#tituloFoto.form-control(type='text' name='titulo_foto')
               .col-md-6
-                label.form-label(for='nomeFotografa') Nome da/o Fot&oacute;grafa/o
-                input#nomeFotografa.form-control(type='text' name='nomeFotografa')
+                label.form-label(for='nome_fotografo') Nome da/o Fot&oacute;grafa/o
+                input#nomeFotografa.form-control(type='text' name='nome_fotografo')
             .col-md-12
-              label.form-label(for='nomeFoto') Foto
-              input#nomeFoto.form-control(type='file' name='nomeFoto')
+              label.form-label(for='nome_foto') Foto
+              input#nomeFoto.form-control(type='file' name='nome_foto')
             .row.div-autorizacao
               .col-md-3
                 label.form-label(for='autorizacao') Li o termo e autorizo o uso de minha imagem
@@ -110,7 +114,7 @@ head
   // Option 2: Separate Popper and Bootstrap JS
   script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js' integrity='sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp' crossorigin='anonymous')
   script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js' integrity='sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/' crossorigin='anonymous')
-  script(src='../Model/js/form.js ')
+  script(src='/js/form.js ')
 br
 br
 br
