--- a/api/views/login.pug
+++ b/api/views/login.pug
@@ -5,33 +5,35 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1')
   // Bootstrap CSS
   link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We' crossorigin='anonymous')
-  link(href='/model/css/style.css' rel='stylesheet')
-  script(src='../Model/js/jquery/jquery.min.js')
+  link(rel='stylesheet', href='/css/style.css', type='text/css')
+  script(src='/js/jquery/jquery.min.js')
   // Font
   link(rel='preconnect' href='https://fonts.googleapis.com')
   link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
   link(href='https://fonts.googleapis.com/css2?family=Alumni+Sans&family=Fredericka+the+Great&family=Piedra&family=Raleway+Dots&display=swap' rel='stylesheet')
   title Projeto Negritude
 #Slide
+  include header.pug
   main
+
     br
     br
     #formGeral.container.d-flex.flex-column.col-md-6
       .container
         h2 Login
-      form#dataForm.row.g-3(name='dataForm' action='/login' method='POST' onsubmit='return validarFormulario()')
+      form#dataForm.row.g-3(name='dataForm' action='/login' method='POST')
         .tab-content
           .holder
             .imgcontainer
-              img.avatar(src='/../Model/img/1.png' alt='Avatar' style='border-radius: 100%; width: 250px;  border: 1px solid rgb(123, 123, 123);')
+              img.avatar(src='/../img/1.png' alt='Avatar' style='border-radius: 100%; width: 250px;  border: 1px solid rgb(123, 123, 123);')
             .login
               br
               .col-md-12
-                label.form-label(for='usuario') Usuario
-                input#usuario.form-control(type='text' placeholder='Escreva o nome de usuario' name='usuario' required='')
+                label.form-label(for='email') Usuario
+                input#usuario.form-control(type='text' placeholder='Escreva o email' name='email' required='')
               .col-md-12
                 label.form-label(for='senha') Senha
-                input#nome.form-control(type='password' placeholder='Escreva a senha' name='nome' required='')
+                input#nome.form-control(type='password' placeholder='Escreva a senha' name='senha' required='')
               label
                 input(type='checkbox' checked='checked' name='remember')
                 |  Lembrar me
@@ -47,7 +49,7 @@ script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundl
 // Option 2: Separate Popper and Bootstrap JS
 script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js' integrity='sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp' crossorigin='anonymous')
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js' integrity='sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/' crossorigin='anonymous')
-script(src='../Model/js/form.js ')
+script(src='/js/form.js ')
 br
 br
 br
