--- a/api/views/relatorio.pug
+++ b/api/views/relatorio.pug
@@ -1,24 +1,50 @@
-head
-  // Required meta tags
-  meta(charset='utf-8')
-  meta(name='viewport' content='width=device-width, initial-scale=1')
-  // Bootstrap CSS
-  link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We' crossorigin='anonymous')
-  link(href='/model/css/style.css' rel='stylesheet')
-  script(src='../Model/js/jquery/jquery.min.js')
-  script(src='../Model/js/relatorio.js')
-  // Font
-  link(rel='preconnect' href='https://fonts.googleapis.com')
-  link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
-  link(href='https://fonts.googleapis.com/css2?family=Alumni+Sans&family=Fredericka+the+Great&family=Piedra&family=Raleway+Dots&display=swap' rel='stylesheet')
-  title Projeto Negritude
-#Slide
-  main
-    br
-    br
-    #formGeral.container.d-flex.flex-column.col-md-6
-      .container
-        h2 M&Oacute;DULO ADM
-      form
-        .tab-content
-          a#rel-albuns(href='#') Relat&oacute;rio albuns
+ include header.pug
+
+block css
+  link(rel="stylesheet", href="styles/relatorio.css", type="text/css")
+
+block main 
+  main 
+    h1 Relatório - Álbum Digital
+
+    each albuns in data
+      .register-row
+        figure
+          img(alt="photo.png", src=`uploads/${albuns.dataValues.nome_foto}`)
+          figcaption: b=albuns.dataValues.titulo_foto
+        ul 
+          li
+            b Nome: 
+            = albuns.dataValues.nome
+          if albuns.dataValues.cpf_responsavel
+            if albuns.dataValues.cpf 
+              li
+                b CPF: 
+                = albuns.dataValues.cpf 
+            li
+              b Responsavel: 
+              = albuns.dataValues.nome_responsavel
+            li
+              b CPF do Responsavel: 
+              = albuns.dataValues.cpf_responsavel
+          else 
+            li
+              b CPF: 
+              = albuns.dataValues.cpf
+          li 
+            b Telefone: 
+            = albuns.dataValues.tel_whats
+          li 
+            b Email:  
+            = albuns.dataValues.email
+          li 
+            b Cidade:  
+            = albuns.dataValues.cidade
+          li 
+            b Data de Nascimento:  
+            = albuns.dataValues.data_nascimento
+          li 
+            b Criado as: 
+            = albuns.dataValues.createdAt 
+          li Frase
+          li Autorização
